<resources>
    <string name="app_name">Weather</string>
    <string name="SeattleText">Seattle</string>
    <string name="yokohamaText">Yokohama</string>
    <string name="taipeiText">Taipei</string>
    <string name="vietnamText">Vietnam</string>
    <string name="button_api">Change APIKEY</string>
    <string name="back">Back</string>
    <string name="place"> </string>
    <string name="time"> </string>
    <string name="weather"> </string>
    <string name="temperature"> </string>
    <string name="max"> </string>
    <string name="min"> </string>
    <string name="forecast">forecastText</string>

    <string name="timeText">Time:</string>
    <string name="placeText">Place:</string>
    <string name="temperatureText">Temperature:</string>
    <string name="statusText">Status:</string>
    <string name="maxText">Highest temperature:</string>
    <string name="minText">Lowest temperature:</string>
    <string name="forecastText">Forecast:</string>

</resources>
