<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SeattleText"
            android:id="@+id/button_seattle"
            android:onClick="buttonOnClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yokohamaText"
            android:id="@+id/button_yokohama"
            android:onClick="buttonOnClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taipeiText"
            android:id="@+id/button_taipei"
            android:onClick="buttonOnClick"/>
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/vietnamText"-->
            <!--android:id="@+id/button_vietnam"-->
            <!--android:onClick="buttonOnClick"/>-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_api"
            android:id="@+id/button_api"
            android:onClick="buttonOnClick"/>

    </LinearLayout>

</LinearLayout>
